--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "fake RESTAPI for movies_advanced_app",
   "main": "server.js",
-  "homepage":"http://prasannapinnam.github.io/moviejsonserver",
+  "homepage": "http://prasannapinnam.github.io/moviejsonserver",
   "scripts": {
-    "auth": "node server.js"
+    "auth": "node server.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +16,7 @@
   },
   "devDependencies": {
     "body-parser": "^1.19.2",
+    "gh-pages": "^3.2.3",
     "jsonwebtoken": "^8.5.1"
   }
 }
