--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "homepage": "http://prasannapinnam.github.io/moviejsonserver",
   "scripts": {
     "auth": "node server.js",
+    "build": "react-scripts build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
