installing react-scripts

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "json-server": "^0.17.0"
+    "json-server": "^0.17.0",
+    "react-scripts": "^5.0.0"
   },
   "devDependencies": {
     "body-parser": "^1.19.2",
