--- a/package.json
+++ b/package.json
@@ -16,6 +16,18 @@
     "json-server": "^0.17.0",
     "react-scripts": "^5.0.0"
   },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "devDependencies": {
     "body-parser": "^1.19.2",
     "gh-pages": "^3.2.3",
