--- a/package.json
+++ b/package.json
@@ -3,12 +3,9 @@
   "version": "1.0.0",
   "description": "fake RESTAPI for movies_advanced_app",
   "main": "server.js",
-  "homepage": "http://prasannapinnam.github.io/moviejsonserver",
   "scripts": {
-    "auth": "node server.js",
-    "build": "react-scripts build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "auth": "node server.js"
+    
   },
   "author": "",
   "license": "ISC",
@@ -16,18 +13,7 @@
     "json-server": "^0.17.0",
     "react-scripts": "^5.0.0"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  
   "devDependencies": {
     "body-parser": "^1.19.2",
     "gh-pages": "^3.2.3",
